tests/error/class_res.gw
// [contains] is reserved
 class now{}
